--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </section>
 
   <section class="newsletter">
-    <div>
+    <div class="newsletter-info">
       <h1>Newsletter</h1>
       <p>assine e fique por dentro das novidades</p>
     </div>
@@ -150,7 +150,7 @@
     </form>
   </section>
 
-  <footer>
+  <footer class="footer">
     <p>FlexBlog @ Todos os direitos reservados</p>
   </footer>
 </body>
